--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "framer-motion": "^11.1.7",
+    "gsap": "^3.12.5",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-locomotive-scroll": "^0.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
