--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-locomotive-scroll": "^0.2.2"
+    "react-locomotive-scroll": "^0.2.2",
+    "sass": "^1.75.0"
   },
   "devDependencies": {
     "@types/node": "^20",
