--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "react-locomotive-scroll": "^0.2.2",
     "sass": "^1.75.0"
   },
